--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -48,12 +48,8 @@ jobs:
       - run:
           name: UI test
           command: |
-              emulator -avd circleci-android25 -no-window:
-                background: true
-                parallel: true
-              # wait for it to have booted
-              circle-android wait-for-boot
-              # run tests  against the emulator.
+              sdkmanager "system-images;android-25;default;armeabi-v7a" && echo "no" | avdmanager create avd -n test -k "system-images;android-25;default;armeabi-v7a"
+              export LD_LIBRARY_PATH=${ANDROID_HOME}/emulator/lib64:${ANDROID_HOME}/emulator/lib64/qt/lib && emulator64-arm -avd test -noaudio -no-boot-anim -no-window -accel on
               ./gradlew connectedAndroidTest
 
       - store_test_results:
