--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,11 +46,17 @@ jobs:
               ./gradlew test
               ./gradlew lint test
       - run:
-          name: UI test
-          command: |
-              sdkmanager "system-images;android-25;default;armeabi-v7a" && echo "no" | avdmanager create avd -n test -k "system-images;android-25;default;armeabi-v7a"
-              export LD_LIBRARY_PATH=${ANDROID_HOME}/emulator/lib64:${ANDROID_HOME}/emulator/lib64/qt/lib && emulator64-arm -avd test -noaudio -no-boot-anim -no-window -accel on
-              ./gradlew connectedAndroidTest
+          name: Setup Emulator
+          command: sdkmanager "system-images;android-25;default;armeabi-v7a" && echo "no" | avdmanager create avd -n test -k "system-images;android-25;default;armeabi-v7a"
+
+      - run:
+          name: Launch Emulator
+          command: export LD_LIBRARY_PATH=${ANDROID_HOME}/emulator/lib64:${ANDROID_HOME}/emulator/lib64/qt/lib && emulator64-arm -avd test -noaudio -no-boot-anim -no-window -accel on
+          background: true
+
+      - run:
+          name: Run UI test
+          command: ./gradlew connectedAndroidTest
 
       - store_test_results:
           path: app/build/test-results
