--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,6 +45,11 @@ jobs:
           command: |
               ./gradlew test
               ./gradlew lint test
+
+      - run:
+          name: Show list of system-images
+          command: sdkmanager --list --verbose | grep system-images
+
       - run:
           name: Setup Emulator
           command: sdkmanager "system-images;android-22;default;armeabi-v7a" && echo "no" | avdmanager create avd -n test -k "system-images;android-22;default;armeabi-v7a"
