--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -60,6 +60,10 @@ jobs:
           background: true
 
       - run:
+          name: Wait emulator
+          command: circle-android wait-for-boot
+
+      - run:
           name: Run UI test
           command: ./gradlew connectedAndroidTest
 
