--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,27 +45,16 @@ jobs:
           command: |
               ./gradlew test
               ./gradlew lint test
-
       - run:
-          name: Show list of system-images
-          command: sdkmanager --list --verbose | grep system-images
-
-      - run:
-          name: Setup Emulator
-          command: sdkmanager "system-images;android-25;google_apis;armeabi-v7a" && echo "no" | avdmanager create avd -n test -k "system-images;android-25;google_apis;armeabi-v7a"
-
-      - run:
-          name: Launch Emulator
-          command: export LD_LIBRARY_PATH=${ANDROID_HOME}/emulator/lib64:${ANDROID_HOME}/emulator/lib64/qt/lib && emulator64-arm -avd test -noaudio -no-boot-anim -no-window -accel on
-          background: true
-
-      - run:
-          name: Wait emulator
-          command: circle-android wait-for-boot
-
-      - run:
-          name: Run UI test
-          command: ./gradlew connectedAndroidTest
+          name: UI test
+          command: |
+              emulator -avd circleci-android25 -no-window:
+                background: true
+                parallel: true
+              # wait for it to have booted
+              circle-android wait-for-boot
+              # run tests  against the emulator.
+              ./gradlew connectedAndroidTest
 
       - store_test_results:
           path: app/build/test-results
