--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -65,10 +65,7 @@ jobs:
 
       - run:
           name: Run UI test
-          command: |
-              # unlock screen
-              adb shell input keyevent 82
-              ./gradlew connectedAndroidTest
+          command: ./gradlew connectedAndroidTest
 
       - store_test_results:
           path: lib/build/test-results
