--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -65,7 +65,7 @@ jobs:
 
       - run:
           name: Run UI test
-          command: ./gradlew connectedAndroidTest
+          command: ./gradlew lib:connectedAndroidTest
 
       - store_test_results:
           path: lib/build/test-results
