--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -1,6 +1,11 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 
+Properties properties = new Properties()
+properties.load(project.rootProject.file('version.properties').newDataInputStream())
+
+def libVersion = properties.getProperty('version')
+
 android {
     compileSdkVersion 26
     buildToolsVersion "26.0.0"
@@ -10,7 +15,7 @@ android {
         minSdkVersion 15
         targetSdkVersion 26
         versionCode 1
-        versionName "1.0"
+        versionName libVersion
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
