fix version.sh path at config.yml

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -73,7 +73,7 @@ jobs:
           name: Update version
           command: |
               if [ $CIRCLE_BRANCH = "master" ]; then
-                sh ~/version.sh
+                sh ../version.sh
               else
                 echo "Version update was skipped."
               fi
