--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -73,8 +73,7 @@ jobs:
           name: Update version
           command: |
               if [ $CIRCLE_BRANCH = "master" ]; then
-                chmod +x ../version.sh
-                sh ../version.sh
+                sh ./version.sh
               else
                 echo "Version update was skipped."
               fi
